--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>917</width>
-    <height>531</height>
+    <width>907</width>
+    <height>564</height>
    </rect>
   </property>
   <property name="palette">
@@ -136,7 +136,7 @@
                 </size>
                </property>
                <property name="text">
-                <string>PushButton</string>
+                <string>Пуш Батон</string>
                </property>
               </widget>
              </item>
@@ -179,7 +179,7 @@
                <bool>true</bool>
               </property>
               <property name="text">
-               <string>Поиск</string>
+               <string>Найти</string>
               </property>
               <property name="icon">
                <iconset resource="res.qrc">
@@ -295,7 +295,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>917</width>
+     <width>907</width>
      <height>25</height>
     </rect>
    </property>
@@ -327,6 +327,7 @@
    <addaction name="menu_2"/>
    <addaction name="menu_3"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="action">
    <property name="text">
     <string>Обновить</string>
