созданы заголовки столбцов таблицы

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -166,7 +166,11 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
-           <widget class="QTableWidget" name="WorkTable"/>
+           <widget class="QTableWidget" name="WorkTable">
+            <property name="sortingEnabled">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
