--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -128,7 +128,7 @@
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <item>
-              <widget class="QPushButton" name="pushButton">
+              <widget class="QPushButton" name="ReloadButton">
                <property name="maximumSize">
                 <size>
                  <width>180</width>
@@ -136,7 +136,14 @@
                 </size>
                </property>
                <property name="text">
-                <string>Пуш Батон</string>
+                <string>Обновить</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="ExitButton">
+               <property name="text">
+                <string>Выйти</string>
                </property>
               </widget>
              </item>
@@ -289,6 +296,19 @@
          <string>PushButton</string>
         </property>
        </widget>
+       <widget class="QPushButton" name="pushButton_4">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>310</y>
+          <width>160</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Выход</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
@@ -307,10 +327,10 @@
     <property name="title">
      <string>Файл</string>
     </property>
-    <addaction name="action"/>
-    <addaction name="action_2"/>
+    <addaction name="ReloadAction"/>
+    <addaction name="EnterAction"/>
     <addaction name="separator"/>
-    <addaction name="action_4"/>
+    <addaction name="ExitAction"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -332,17 +352,17 @@
    <addaction name="menu_3"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="action">
+  <action name="ReloadAction">
    <property name="text">
     <string>Обновить</string>
    </property>
   </action>
-  <action name="action_2">
+  <action name="EnterAction">
    <property name="text">
     <string>Перезайти</string>
    </property>
   </action>
-  <action name="action_4">
+  <action name="ExitAction">
    <property name="text">
     <string>Выход</string>
    </property>
